<resources>
    <string name="app_name">Bet Sports</string>
    <string name="titulo"><b><u>Registrarse</u></b></string>
    <string name="usuariotxt"><b>Usuario</b></string>
    <string name="passwordtxt"><b>Contraseña</b></string>
    <string name="edadtxt"><b>Edad</b></string>
    <string name="mailtxt"><b>e-mail</b></string>
    <string name="condiciones">Acepto los <u>Terminos y Condiciones</u></string>
    <string name="botonRgistrar">REGISTRAR</string>
    <string name="botonLimpiar">LIMPIAR</string>
    <string name="registrarsetxt">REGISTRARSE</string>
    <string name="ingresar">INGRESAR</string>
    <string name="futbol">futbol</string>
    <string name="basketball">basketball</string>
    <string name="UFC">UFC</string>
    <string name="Peleadegallos">Pelea de gallos</string>
    <string name="formula1">formula1</string>
    <string name="tenis">Tenis</string>
    <string name="Esports">Esports</string>
    <string name="Carreracaballos">Carrera caballos</string>
    <string name="selecciona">Selecciona los deportes de tu interes</string>
    <string name="bienvenido">Bienvenido usuario</string>
    <string name="Aceptar">Aceptar</string>
    <string name="aplicacion">APP</string>

    <string name="title_mainmenu">Eventos</string>
    <string name="proximos">PRÓXIMOS</string>
    <string name="populares">POPULARES</string>
    <string name="en_juego">EN JUEGO</string>
    <string name="seleccionaE">Selecciona los equipos de tu interes</string>

    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <string name="drawer_opened">Drawer Opened</string>
    <string name="drawerclosed">Drawer Closed</string>
</resources>
