<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:padding="50dp"
    android:background="@drawable/login_background"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_app_final"
            android:adjustViewBounds="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_xl"
            android:text="@string/usuariotxt"
            android:textColor="@color/white"
            android:textSize="@dimen/title"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:inputType="text"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passwordtxt"
            android:textStyle="bold"
            android:textSize="@dimen/title"
            android:textColor="@color/white"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:inputType="textPassword"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_botones"
            android:layout_margin="@dimen/space_xs"
            android:text="@string/ingresar"
            android:textStyle="bold"
            android:textSize="@dimen/title"
            android:textColor="@color/white"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_botones"
            android:layout_margin="@dimen/space_xs"
            android:text="@string/registrarsetxt"
            android:textStyle="bold"
            android:textSize="@dimen/title"
            android:textColor="@color/white"/>

    </LinearLayout>

</RelativeLayout>