<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity"
    android:background="#D1C4E9">


    <android.support.v4.widget.DrawerLayout
        android:id="@+id/navigationDrawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/morado"
                android:elevation="5dp"/>

    <!--<RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar"
        android:background="#673AB7"
        android:padding="@dimen/space_md">

        <ImageView
            android:layout_width="@dimen/toolbar"
            android:layout_height="@dimen/toolbar"
            android:src="@drawable/icon_hamburger"
            android:onClick="goToCategorias"/>

        <TextView
            android:id="@+id/dinero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_horizontal"
            android:text="0$"
            android:textSize="36sp"
            tools:layout_editor_absoluteX="273dp"
            tools:layout_editor_absoluteY="0dp"
            android:textColor="@color/white"/>
    </RelativeLayout>-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_below="@id/toolbar"
                android:padding="@dimen/space_xl">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_mainmenu"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/super_title"
                    android:paddingBottom="@dimen/space_xl"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/proximos"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="33"
                        android:background="@drawable/background_botones"
                        android:layout_marginEnd="@dimen/space_xs"
                        android:layout_marginStart="@dimen/space_xs"
                        android:text="@string/proximos"
                        android:textColor="@color/white"/>

                    <Button
                        android:id="@+id/populares"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="33"
                        android:background="@drawable/background_botones"
                        android:layout_marginEnd="@dimen/space_xs"
                        android:layout_marginStart="@dimen/space_xs"
                        android:text="@string/populares"
                        android:textColor="@color/white"/>
                    <Button
                        android:id="@+id/juego"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="33"
                        android:background="@drawable/background_botones"
                        android:layout_marginEnd="@dimen/space_xs"
                        android:layout_marginStart="@dimen/space_xs"
                        android:text="@string/en_juego"
                        android:textColor="@color/white"/>
                </LinearLayout>

                <ListView
                    android:id="@+id/lista"
                    android:layout_width="match_parent"
                    android:layout_height="430dp"
                    android:layout_marginTop="@dimen/space_lg"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_xl"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="25"
                        android:src="@drawable/facebook_icon"/>

                    <TextView
                        android:id="@+id/facebook"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="75"
                        android:text="Visita nuestro Facebook"
                        android:textSize="@dimen/title"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_marginStart="@dimen/space_xs"
                        android:onClick="onClick"/>
                 </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <android.support.design.widget.NavigationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true">

            <include layout="@layout/drawer_layout_dep"/>

        </android.support.design.widget.NavigationView>

    </android.support.v4.widget.DrawerLayout>

</RelativeLayout>